--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4387,5 +4387,28 @@
     "CL_CF_CM_Paired_users": "ζευγαρωμένους χρήστες",
     "CL_CF_CS_atw_cs_2": "Πατήστε το κουμπί Μενού για να εισέλθετε στη λίστα μενού.",
     "CL_CF_CS_atw_cs_3": "Επιλέξτε WIFI και, στη συνέχεια, πατήστε το μεσαίο κουμπί για να ξεκινήσει η διαμόρφωση WIFI. Το σύμβολο WLAN θα αρχίσει τώρα να αναβοσβήνει.",
-    "CL_CF_CM_sun_rain_atw_name": "Αντλία θερμότητας ATW"
+    "CL_CF_CM_sun_rain_atw_name": "Αντλία θερμότητας ATW",
+    "CL_DV_OV_continue_keep_warm_desc": "Προσθέστε επιπλέον χρόνο για να διατηρήσετε το φαγητό σας ζεστό.",
+    "CL_DV_OV_continue_fast_cool_desc": "Ψύξτε το φούρνο όσο πιο γρήγορα γίνεται.",
+    "CL_DV_OV_continue_reduces_desc": "Μειώνει την υγρασία που απομένει μετά το μαγείρεμα.",
+    "CL_DV_OV_go_to_extra": "Πηγαίνετε στα επιπλέον",
+    "CL_SL_CM_visualization": "Οραματισμός",
+    "CL_SL_CM_laundry_usage_report": "Αναφορά χρήσης πλυντηρίου",
+    "CL_SL_CM_usage_month": "Χρήση του μήνα",
+    "CL_SL_CM_about_usage_month": "Σχετικά με τη χρήση του μήνα",
+    "CL_SL_CM_about_usage_month_detail": "Τα δεδομένα που εμφανίζονται είναι εκτιμήσεις και όχι ακριβείς μετρήσεις. Οι εκτιμήσεις μας βασίζονται σε ελεγχόμενες δοκιμές, επομένως τα πραγματικά σας αποτελέσματα ενδέχεται να διαφέρουν. Η πραγματική χρήση ενέργειας εξαρτάται από το συγκεκριμένο περιβάλλον και τις συνήθειές σας.",
+    "CL_SL_CM_drum_cleaning_title": "Καθαρισμός τυμπάνου",
+    "CL_SL_CM_drum_cleaning_great_job": "Το τύμπανο του πλυντηρίου είναι καθαρό και κάνατε εξαιρετική δουλειά!",
+    "CL_SL_CM_drum_cleaning_warning": "Έχει πλυθεί πολλές φορές από τον τελευταίο καθαρισμό του τυμπάνου και συνιστάται η χρήση του για να φτιάξετε το καθαριστικό ρούχων.",
+    "CL_SL_CM_drum_cleaning_about": "Σχετικά με τον καθαρισμό τυμπάνων",
+    "CL_SL_CM_drum_cleaning_about_detail": "Η λειτουργία καθαρισμού τυμπάνου πλυντηρίου είναι ένας κύκλος αυτοκαθαρισμού που έχει σχεδιαστεί για την αφαίρεση μούχλας ή άλλων βακτηρίων που είναι πιθανό να έχουν συσσωρευτεί στο εσωτερικό του κάδου μέσω γενικής χρήσης. Σας συνιστούμε να κάνετε καθαρισμό τυμπάνου μετά από 30 κύκλους πλύσης.",
+    "CL_SL_CM_data_statistics": "Στατιστικά στοιχεία",
+    "CL_SL_CM_data_statistics_about": "Σχετικά με τα στατιστικά στοιχεία",
+    "CL_SL_CM_data_statistics_about_detail": "Το \"Άλλα\" είναι το άθροισμα των λιγότερο χρησιμοποιούμενων.",
+    "CL_SL_CM_usage_week_about": "Σχετικά με τη χρήση της εβδομάδας",
+    "CL_SL_CM_usage_month_about": "Σχετικά με τη χρήση του μήνα",
+    "CL_SL_CM_usage_year_about": "Σχετικά με τη χρήση της χρονιάς",
+    "CL_SL_CM_washing_temperature": "Θερμοκρασία πλύσης",
+    "CL_SL_CM_washing_temperature_detail": "Οι χαμηλότερες θερμοκρασίες είναι στατιστικά πιο ενεργειακά αποδοτικές, επομένως μπορεί να θέλετε να δοκιμάσετε χαμηλότερη θερμοκρασία νερού την επόμενη φορά.",
+    "add_appliance_connect_wifi_atos": "Συνδεθείτε στο δίκτυο \"ConnectLife\" στις ρυθμίσεις Wi-Fi του smartphone σας.\n\nΈξοδος από την εφαρμογή ConnectLife και μεταβείτε στις ρυθμίσεις Wi-Fi του smartphone σας. Συνδεθείτε στο δίκτυο \"ConnectLife\", πληκτρολογήστε τον κωδικό πρόσβασης \"ConnectLife\" και επιστρέψτε στην εφαρμογή."
 }
