--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -4387,5 +4387,28 @@
     "CL_CF_CM_Paired_users": "utilisateurs appariés",
     "CL_CF_CS_atw_cs_2": "Appuyez sur le bouton Menu pour accéder à la liste des menus.",
     "CL_CF_CS_atw_cs_3": "Sélectionnez WIFI, puis appuyez sur le bouton central pour démarrer la configuration du WIFI. Le symbole WLAN commence alors à clignoter.",
-    "CL_CF_CM_sun_rain_atw_name": "Pompe à chaleur ATW"
+    "CL_CF_CM_sun_rain_atw_name": "Pompe à chaleur ATW",
+    "CL_DV_OV_continue_keep_warm_desc": "Ajoutez du temps supplémentaire pour garder vos aliments au chaud.",
+    "CL_DV_OV_continue_fast_cool_desc": "Laissez refroidir le four le plus rapidement possible.",
+    "CL_DV_OV_continue_reduces_desc": "Réduit l’humidité restante après la cuisson.",
+    "CL_DV_OV_go_to_extra": "Accéder aux extras",
+    "CL_SL_CM_visualization": "Visualisation",
+    "CL_SL_CM_laundry_usage_report": "Rapport d'utilisation de la lessive",
+    "CL_SL_CM_usage_month": "Utilisation du mois",
+    "CL_SL_CM_about_usage_month": "À propos de l'utilisation du mois",
+    "CL_SL_CM_about_usage_month_detail": "Les données affichées sont des estimations et non des mesures exactes. Nos estimations sont basées sur des tests contrôlés, de sorte que vos résultats réels peuvent varier. La consommation d'énergie réelle dépend de votre environnement et de vos habitudes spécifiques.",
+    "CL_SL_CM_drum_cleaning_title": "Nettoyage du tambour",
+    "CL_SL_CM_drum_cleaning_great_job": "Le tambour de la laveuse est propre et vous avez fait un excellent travail !",
+    "CL_SL_CM_drum_cleaning_warning": "Il a été lavé plusieurs fois depuis le dernier nettoyage du tambour et il est recommandé de l'utiliser pour rendre le linge plus propre.",
+    "CL_SL_CM_drum_cleaning_about": "À propos du nettoyage du tambour",
+    "CL_SL_CM_drum_cleaning_about_detail": "La fonction de nettoyage du tambour d'une machine à laver est un cycle d'autonettoyage conçu pour éliminer les moisissures ou autres bactéries susceptibles de s'être accumulées à l'intérieur du tambour lors d'une utilisation générale. Nous vous recommandons d'effectuer un nettoyage du tambour après 30 cycles de lessive.",
+    "CL_SL_CM_data_statistics": "Statistiques des données",
+    "CL_SL_CM_data_statistics_about": "À propos des statistiques de données",
+    "CL_SL_CM_data_statistics_about_detail": "« Autres » est la somme des termes moins utilisés.",
+    "CL_SL_CM_usage_week_about": "À propos de l'utilisation de la semaine",
+    "CL_SL_CM_usage_month_about": "À propos de l'utilisation du mois",
+    "CL_SL_CM_usage_year_about": "À propos de l'utilisation de l'année",
+    "CL_SL_CM_washing_temperature": "Température de lavage",
+    "CL_SL_CM_washing_temperature_detail": "Les températures plus basses sont statistiquement plus économes en énergie, vous pouvez donc essayer une température d'eau plus basse la prochaine fois.",
+    "add_appliance_connect_wifi_atos": "Connectez-vous au réseau \"ConnectLife\" dans les paramètres Wi-Fi de votre smartphone.\n\nQuittez l'application ConnectLife et accédez aux paramètres Wi-Fi de votre smartphone. Connectez-vous au réseau « ConnectLife », saisissez le mot de passe « ConnectLife » et revenez à l'application."
 }
