--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -4387,5 +4387,28 @@
     "CL_CF_CM_Paired_users": "משתמשים מזווגים",
     "CL_CF_CS_atw_cs_2": "לחץ על לחצן תפריט כדי להיכנס לרשימת התפריטים.",
     "CL_CF_CS_atw_cs_3": "בחר WIFI ולאחר מכן לחץ על הלחצן האמצעי כדי להתחיל את תצורת ה-WIFI. סמל ה-WLAN יתחיל כעת להבהב.",
-    "CL_CF_CM_sun_rain_atw_name": "משאבת חום ATW"
+    "CL_CF_CM_sun_rain_atw_name": "משאבת חום ATW",
+    "CL_DV_OV_continue_keep_warm_desc": "הוסף זמן נוסף כדי לשמור על חום האוכל שלך.",
+    "CL_DV_OV_continue_fast_cool_desc": "מצננים את התנור כמה שיותר מהר.",
+    "CL_DV_OV_continue_reduces_desc": "מפחית את הלחות שנותרה לאחר הבישול.",
+    "CL_DV_OV_go_to_extra": "לך לתוספות",
+    "CL_SL_CM_visualization": "רְאִיָה",
+    "CL_SL_CM_laundry_usage_report": "דוח שימוש בכביסה",
+    "CL_SL_CM_usage_month": "שימוש החודש",
+    "CL_SL_CM_about_usage_month": "לגבי השימוש בחודש",
+    "CL_SL_CM_about_usage_month_detail": "הנתונים המוצגים הם הערכות, לא מדידות מדויקות. ההערכות שלנו מבוססות על בדיקות מבוקרות, כך שהתוצאות בפועל עשויות להשתנות. השימוש באנרגיה בעולם האמיתי תלוי בסביבה ובהרגלים הספציפיים שלך.",
+    "CL_SL_CM_drum_cleaning_title": "ניקוי תופים",
+    "CL_SL_CM_drum_cleaning_great_job": "תוף הכביסה נקי ועשית עבודה נהדרת!",
+    "CL_SL_CM_drum_cleaning_warning": "הוא נשטף פעמים רבות מאז ניקוי התוף האחרון, ומומלץ לעשות בו את הכביסה נקייה יותר.",
+    "CL_SL_CM_drum_cleaning_about": "לגבי ניקוי תופים",
+    "CL_SL_CM_drum_cleaning_about_detail": "פונקציית ניקוי תוף במכונת כביסה היא מחזור ניקוי עצמי שנועד להסיר עובש או חיידקים אחרים שסביר שהצטברו בתוך התוף באמצעות שימוש כללי. אנו ממליצים לבצע ניקוי תוף לאחר 30 מחזורי כביסה.",
+    "CL_SL_CM_data_statistics": "נתונים סטטיסטיים",
+    "CL_SL_CM_data_statistics_about": "לגבי נתונים סטטיסטיים",
+    "CL_SL_CM_data_statistics_about_detail": "\"אחרים\" הוא סכום הפחות בשימוש.",
+    "CL_SL_CM_usage_week_about": "לגבי השימוש בשבוע",
+    "CL_SL_CM_usage_month_about": "לגבי השימוש בחודש",
+    "CL_SL_CM_usage_year_about": "לגבי שימוש השנה",
+    "CL_SL_CM_washing_temperature": "טמפרטורת כביסה",
+    "CL_SL_CM_washing_temperature_detail": "טמפרטורות נמוכות יותר חסכוניות יותר מבחינה סטטיסטית באנרגיה, אז אולי כדאי לנסות טמפרטורת מים נמוכה יותר בפעם הבאה.",
+    "add_appliance_connect_wifi_atos": "התחבר לרשת \"ConnectLife\" בהגדרות ה-Wi-Fi של הטלפון החכם שלך.\n\nצא מאפליקציית ConnectLife ועבור להגדרות ה-Wi-Fi של הטלפון החכם שלך. התחבר לרשת \"ConnectLife\", הקלד את הסיסמה \"ConnectLife\" וחזור לאפליקציה."
 }
