--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4387,5 +4387,28 @@
     "CL_CF_CM_Paired_users": "жұптастырылған пайдаланушылар",
     "CL_CF_CS_atw_cs_2": "Мәзір тізіміне кіру үшін Мәзір түймесін басыңыз.",
     "CL_CF_CS_atw_cs_3": "WIFI таңдап, WIFI конфигурациясын бастау үшін ортаңғы түймені басыңыз. WLAN белгісі енді жыпылықтай бастайды.",
-    "CL_CF_CM_sun_rain_atw_name": "ATW жылу сорғысы"
+    "CL_CF_CM_sun_rain_atw_name": "ATW жылу сорғысы",
+    "CL_DV_OV_continue_keep_warm_desc": "Тамақты жылы ұстау үшін қосымша уақыт қосыңыз.",
+    "CL_DV_OV_continue_fast_cool_desc": "Пешті мүмкіндігінше тез суытыңыз.",
+    "CL_DV_OV_continue_reduces_desc": "Пісіргеннен кейін қалған ылғалды азайтады.",
+    "CL_DV_OV_go_to_extra": "Қосымшаға барыңыз",
+    "CL_SL_CM_visualization": "Визуализация",
+    "CL_SL_CM_laundry_usage_report": "Кірді пайдалану туралы есеп",
+    "CL_SL_CM_usage_month": "Айдың қолданылуы",
+    "CL_SL_CM_about_usage_month": "Айдың қолданылуы туралы",
+    "CL_SL_CM_about_usage_month_detail": "Көрсетілген деректер нақты өлшемдер емес, шамалар болып табылады. Біздің бағалауларымыз бақыланатын сынақтарға негізделген, сондықтан нақты нәтижелеріңіз әртүрлі болуы мүмкін. Нақты әлемдегі энергияны пайдалану нақты ортаңызға және әдеттеріңізге байланысты.",
+    "CL_SL_CM_drum_cleaning_title": "Барабан тазалау",
+    "CL_SL_CM_drum_cleaning_great_job": "Жуғыш барабан таза және сіз тамаша жұмыс жасадыңыз!",
+    "CL_SL_CM_drum_cleaning_warning": "Барабанды соңғы тазалаудан кейін ол бірнеше рет жуылды және оны кір жууға арналған құрал жасау үшін пайдалану ұсынылады.",
+    "CL_SL_CM_drum_cleaning_about": "Барабандарды тазалау туралы",
+    "CL_SL_CM_drum_cleaning_about_detail": "Кір жуғыш машина барабанын тазалау функциясы жалпы пайдалану арқылы барабанның ішінде жиналуы мүмкін зеңді немесе басқа бактерияларды кетіруге арналған өзін-өзі тазалау циклы болып табылады. 30 кір жуу циклынан кейін барабанды тазалауды ұсынамыз.",
+    "CL_SL_CM_data_statistics": "Деректер статистикасы",
+    "CL_SL_CM_data_statistics_about": "Деректер статистикасы туралы",
+    "CL_SL_CM_data_statistics_about_detail": "«Басқалар» - аз қолданылатындардың қосындысы.",
+    "CL_SL_CM_usage_week_about": "Аптаның қолданылуы туралы",
+    "CL_SL_CM_usage_month_about": "Айдың қолданылуы туралы",
+    "CL_SL_CM_usage_year_about": "Жылдың қолданылуы туралы",
+    "CL_SL_CM_washing_temperature": "Жуу температурасы",
+    "CL_SL_CM_washing_temperature_detail": "Төменгі температуралар статистикалық түрде энергияны тиімдірек етеді, сондықтан келесі жолы төменірек су температурасын қолданғыңыз келуі мүмкін.",
+    "add_appliance_connect_wifi_atos": "Смартфоныңыздың Wi-Fi параметрлерінде «ConnectLife» желісіне қосылыңыз.\n\nConnectLife қолданбасынан шығып, смартфонның Wi-Fi параметрлеріне өтіңіз. «ConnectLife» желісіне қосылыңыз, «ConnectLife» құпия сөзін енгізіңіз және қолданбаға оралыңыз."
 }
