--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -4387,5 +4387,28 @@
     "CL_CF_CM_Paired_users": "sammenkoblede brukere",
     "CL_CF_CS_atw_cs_2": "Trykk på Meny-knappen for å gå inn i menylisten.",
     "CL_CF_CS_atw_cs_3": "Velg WIFI, og trykk deretter på midtknappen for å starte WIFI-konfigurasjonen. WLAN-symbolet vil nå begynne å blinke.",
-    "CL_CF_CM_sun_rain_atw_name": "ATW varmepumpe"
+    "CL_CF_CM_sun_rain_atw_name": "ATW varmepumpe",
+    "CL_DV_OV_continue_keep_warm_desc": "Legg til ekstra tid for å holde maten varm.",
+    "CL_DV_OV_continue_fast_cool_desc": "Avkjøl ovnen så fort som mulig.",
+    "CL_DV_OV_continue_reduces_desc": "Reduserer gjenværende fuktighet etter tilberedning.",
+    "CL_DV_OV_go_to_extra": "Gå til ekstra",
+    "CL_SL_CM_visualization": "Visualisering",
+    "CL_SL_CM_laundry_usage_report": "Rapport om bruk av vaskeri",
+    "CL_SL_CM_usage_month": "Månedens bruk",
+    "CL_SL_CM_about_usage_month": "Om månedens bruk",
+    "CL_SL_CM_about_usage_month_detail": "Dataene som vises er estimater, ikke eksakte målinger. Våre estimater er basert på kontrollerte tester, så de faktiske resultatene dine kan variere. Den virkelige energibruken avhenger av ditt spesifikke miljø og dine vaner.",
+    "CL_SL_CM_drum_cleaning_title": "Trommelrengjøring",
+    "CL_SL_CM_drum_cleaning_great_job": "Vasketrommelen er ren og du gjorde en god jobb!",
+    "CL_SL_CM_drum_cleaning_warning": "Den har blitt vasket mange ganger siden siste trommelrengjøring, og det anbefales å bruke den til å gjøre tøyet renere.",
+    "CL_SL_CM_drum_cleaning_about": "Om trommelrengjøring",
+    "CL_SL_CM_drum_cleaning_about_detail": "En vaskemaskin trommelrengjøringsfunksjon er en selvrensende syklus designet for å fjerne mugg eller andre bakterier som sannsynligvis har bygget seg opp inne i trommelen ved generell bruk. Vi anbefaler at du gjør en trommelrengjøring etter 30 vaskesykluser.",
+    "CL_SL_CM_data_statistics": "Datastatistikk",
+    "CL_SL_CM_data_statistics_about": "Om datastatistikk",
+    "CL_SL_CM_data_statistics_about_detail": "\"Andre\" er summen av mindre brukte.",
+    "CL_SL_CM_usage_week_about": "Om bruk av uken",
+    "CL_SL_CM_usage_month_about": "Om månedens bruk",
+    "CL_SL_CM_usage_year_about": "Om årets bruk",
+    "CL_SL_CM_washing_temperature": "Vasketemperatur",
+    "CL_SL_CM_washing_temperature_detail": "Lavere temperaturer er statistisk sett mer energieffektive, så det kan være lurt å prøve en lavere vanntemperatur neste gang.",
+    "add_appliance_connect_wifi_atos": "Koble til «ConnectLife»-nettverket i Wi-Fi-innstillingene på smarttelefonen.\n\nAvslutt ConnectLife-appen og gå til smarttelefonens Wi-Fi-innstillinger. Koble til \"ConnectLife\"-nettverket, skriv inn passordet \"ConnectLife\" og gå tilbake til appen."
 }
