--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -4387,5 +4387,28 @@
     "CL_CF_CM_Paired_users": "gepaarde gebruikers",
     "CL_CF_CS_atw_cs_2": "Druk op de Menu-knop om de menulijst te openen.",
     "CL_CF_CS_atw_cs_3": "Selecteer WIFI, druk dan op de middelste knop om de WIFI-configuratie te starten. Het WLAN-symbool begint nu te knipperen.",
-    "CL_CF_CM_sun_rain_atw_name": "ATW warmtepomp"
+    "CL_CF_CM_sun_rain_atw_name": "ATW warmtepomp",
+    "CL_DV_OV_continue_keep_warm_desc": "Houd er rekening mee dat het eten langer warm moet blijven.",
+    "CL_DV_OV_continue_fast_cool_desc": "Laat de oven zo snel mogelijk afkoelen.",
+    "CL_DV_OV_continue_reduces_desc": "Vermindert het resterende vocht na het koken.",
+    "CL_DV_OV_go_to_extra": "Ga naar extra's",
+    "CL_SL_CM_visualization": "Visualisatie",
+    "CL_SL_CM_laundry_usage_report": "Rapport over het gebruik van wasgoed",
+    "CL_SL_CM_usage_month": "Gebruik van de maand",
+    "CL_SL_CM_about_usage_month": "Over het gebruik van de maand",
+    "CL_SL_CM_about_usage_month_detail": "De getoonde gegevens zijn schattingen en geen exacte metingen. Onze schattingen zijn gebaseerd op gecontroleerde tests, dus uw werkelijke resultaten kunnen afwijken. Het werkelijke energieverbruik is afhankelijk van uw specifieke omgeving en gewoonten.",
+    "CL_SL_CM_drum_cleaning_title": "Trommelreiniging",
+    "CL_SL_CM_drum_cleaning_great_job": "De wastrommel is schoon en je hebt het geweldig gedaan!",
+    "CL_SL_CM_drum_cleaning_warning": "Het is sinds de laatste trommelreiniging meerdere keren gewassen en het wordt aanbevolen om het te gebruiken om de was schoner te maken.",
+    "CL_SL_CM_drum_cleaning_about": "Over het reinigen van de trommel",
+    "CL_SL_CM_drum_cleaning_about_detail": "De reinigingsfunctie van de trommel van een wasmachine is een zelfreinigende cyclus die is ontworpen om schimmel of andere bacteriën te verwijderen die zich door normaal gebruik in de trommel hebben opgehoopt. Wij raden u aan om de trommel na 30 wasbeurten te reinigen.",
+    "CL_SL_CM_data_statistics": "Gegevensstatistieken",
+    "CL_SL_CM_data_statistics_about": "Over datastatistieken",
+    "CL_SL_CM_data_statistics_about_detail": "‘Anders’ is de som van de minder gebruikte termen.",
+    "CL_SL_CM_usage_week_about": "Over het gebruik van de week",
+    "CL_SL_CM_usage_month_about": "Over het gebruik van de maand",
+    "CL_SL_CM_usage_year_about": "Over het gebruik van het jaar",
+    "CL_SL_CM_washing_temperature": "Wastemperatuur",
+    "CL_SL_CM_washing_temperature_detail": "Statistisch gezien zijn lagere temperaturen energiezuiniger. Probeer daarom de volgende keer een lagere watertemperatuur.",
+    "add_appliance_connect_wifi_atos": "Maak verbinding met het \"ConnectLife\"-netwerk in de Wi-Fi-instellingen van uw smartphone.\n\nSluit de ConnectLife-app af en ga naar de Wi-Fi-instellingen van uw smartphone. Maak verbinding met het \"ConnectLife\"-netwerk, typ het wachtwoord \"ConnectLife\" in en keer terug naar de app."
 }
