--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -4387,5 +4387,28 @@
     "CL_CF_CM_Paired_users": "usuários pareados",
     "CL_CF_CS_atw_cs_2": "Pressione o botão Menu para entrar na lista de menus.",
     "CL_CF_CS_atw_cs_3": "Selecione WIFI, então pressione o botão do meio para iniciar a configuração WIFI. O símbolo WLAN começará a piscar.",
-    "CL_CF_CM_sun_rain_atw_name": "Bomba de calor ATW"
+    "CL_CF_CM_sun_rain_atw_name": "Bomba de calor ATW",
+    "CL_DV_OV_continue_keep_warm_desc": "Adicione mais tempo para manter sua comida quente.",
+    "CL_DV_OV_continue_fast_cool_desc": "Deixe o forno esfriar o mais rápido possível.",
+    "CL_DV_OV_continue_reduces_desc": "Reduz a umidade restante após o cozimento.",
+    "CL_DV_OV_go_to_extra": "Ir para extras",
+    "CL_SL_CM_visualization": "Visualização",
+    "CL_SL_CM_laundry_usage_report": "Relatório de uso de lavanderia",
+    "CL_SL_CM_usage_month": "Uso do mês",
+    "CL_SL_CM_about_usage_month": "Sobre o uso do mês",
+    "CL_SL_CM_about_usage_month_detail": "Os dados mostrados são estimativas, não medições exatas. Nossas estimativas são baseadas em testes controlados, portanto seus resultados reais podem variar. O uso de energia no mundo real depende do seu ambiente e hábitos específicos.",
+    "CL_SL_CM_drum_cleaning_title": "Limpeza de tambor",
+    "CL_SL_CM_drum_cleaning_great_job": "O tambor da máquina de lavar está limpo e você fez um ótimo trabalho!",
+    "CL_SL_CM_drum_cleaning_warning": "Ele foi lavado muitas vezes desde a última limpeza do tambor e é recomendável usá-lo para deixar a roupa mais limpa.",
+    "CL_SL_CM_drum_cleaning_about": "Sobre limpeza de tambor",
+    "CL_SL_CM_drum_cleaning_about_detail": "A função de limpeza do tambor da máquina de lavar é um ciclo de autolimpeza projetado para remover mofo ou outras bactérias que podem ter se acumulado dentro do tambor devido ao uso geral. Recomendamos que você faça uma limpeza do tambor após 30 ciclos de lavagem.",
+    "CL_SL_CM_data_statistics": "Estatísticas de dados",
+    "CL_SL_CM_data_statistics_about": "Sobre estatísticas de dados",
+    "CL_SL_CM_data_statistics_about_detail": "“Outros” é a soma dos menos utilizados.",
+    "CL_SL_CM_usage_week_about": "Sobre o uso da semana",
+    "CL_SL_CM_usage_month_about": "Sobre o uso do mês",
+    "CL_SL_CM_usage_year_about": "Sobre o uso do ano",
+    "CL_SL_CM_washing_temperature": "Temperatura de lavagem",
+    "CL_SL_CM_washing_temperature_detail": "Temperaturas mais baixas são estatisticamente mais eficientes em termos de energia, então talvez você queira tentar uma temperatura de água mais baixa na próxima vez.",
+    "add_appliance_connect_wifi_atos": "Ligue-se à rede “ConnectLife” nas definições de Wi-Fi do seu smartphone.\n\nSaia da aplicação ConnectLife e aceda às definições de Wi-Fi do seu smartphone. Ligue-se à rede “ConnectLife”, introduza a palavra-passe “ConnectLife” e regresse à aplicação."
 }
