--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -4387,5 +4387,28 @@
     "CL_CF_CM_Paired_users": "utilizatori perechi",
     "CL_CF_CS_atw_cs_2": "Apăsați butonul Meniu pentru a intra în lista de meniuri.",
     "CL_CF_CS_atw_cs_3": "Selectați WIFI, apoi apăsați butonul din mijloc pentru a începe configurarea WIFI. Simbolul WLAN va începe să clipească acum.",
-    "CL_CF_CM_sun_rain_atw_name": "Pompa de caldura ATW"
+    "CL_CF_CM_sun_rain_atw_name": "Pompa de caldura ATW",
+    "CL_DV_OV_continue_keep_warm_desc": "Adăugați timp suplimentar pentru a vă menține mâncarea caldă.",
+    "CL_DV_OV_continue_fast_cool_desc": "Răciți cuptorul cât mai repede posibil.",
+    "CL_DV_OV_continue_reduces_desc": "Reduce umiditatea rămasă după gătire.",
+    "CL_DV_OV_go_to_extra": "Du-te la extra",
+    "CL_SL_CM_visualization": "Vizualizarea",
+    "CL_SL_CM_laundry_usage_report": "Raport de utilizare a rufelor",
+    "CL_SL_CM_usage_month": "Utilizarea lunii",
+    "CL_SL_CM_about_usage_month": "Despre utilizarea lunii",
+    "CL_SL_CM_about_usage_month_detail": "Datele afișate sunt estimări, nu măsurători exacte. Estimările noastre se bazează pe teste controlate, astfel încât rezultatele dvs. reale pot varia. Utilizarea energiei în lumea reală depinde de mediul și obiceiurile dvs. specifice.",
+    "CL_SL_CM_drum_cleaning_title": "Curățarea tamburului",
+    "CL_SL_CM_drum_cleaning_great_job": "Tamburul de spălat este curat și ai făcut o treabă grozavă!",
+    "CL_SL_CM_drum_cleaning_warning": "A fost spalat de multe ori de la ultima curatare a tamburului si se recomanda folosirea lui pentru a face rufele curate.",
+    "CL_SL_CM_drum_cleaning_about": "Despre curățarea tamburului",
+    "CL_SL_CM_drum_cleaning_about_detail": "O funcție de curățare a tamburului mașinii de spălat este un ciclu de auto-curățare conceput pentru a îndepărta mucegaiul sau alte bacterii care este probabil să se fi acumulat în interiorul tamburului prin utilizarea generală. Vă recomandăm să faceți o curățare a tamburului după 30 de cicluri de spălare.",
+    "CL_SL_CM_data_statistics": "Statistici de date",
+    "CL_SL_CM_data_statistics_about": "Despre statisticile datelor",
+    "CL_SL_CM_data_statistics_about_detail": "„Alții” este suma celor mai puțin utilizate.",
+    "CL_SL_CM_usage_week_about": "Despre utilizarea săptămânii",
+    "CL_SL_CM_usage_month_about": "Despre utilizarea lunii",
+    "CL_SL_CM_usage_year_about": "Despre utilizarea anului",
+    "CL_SL_CM_washing_temperature": "Temperatura de spalare",
+    "CL_SL_CM_washing_temperature_detail": "Temperaturile mai scăzute sunt statistic mai eficiente din punct de vedere energetic, așa că poate doriți să încercați o temperatură mai scăzută a apei data viitoare.",
+    "add_appliance_connect_wifi_atos": "Conectați-vă la rețeaua „ConnectLife” din setările Wi-Fi ale smartphone-ului dvs..\n\nIeșiți din aplicația ConnectLife și accesați setările Wi-Fi ale smartphone-ului. Conectați-vă la rețeaua „ConnectLife”, introduceți parola „ConnectLife” și reveniți la aplicație."
 }
