--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -4387,5 +4387,28 @@
     "CL_CF_CM_Paired_users": "упарени корисници",
     "CL_CF_CS_atw_cs_2": "Притисните дугме Мени да бисте ушли у листу менија.",
     "CL_CF_CS_atw_cs_3": "Изаберите ВИФИ, а затим притисните средње дугме да бисте покренули ВИФИ конфигурацију. Симбол ВЛАН ће сада почети да трепери.",
-    "CL_CF_CM_sun_rain_atw_name": "АТВ топлотна пумпа"
+    "CL_CF_CM_sun_rain_atw_name": "АТВ топлотна пумпа",
+    "CL_DV_OV_continue_keep_warm_desc": "Додајте додатно време да ваша храна буде топла.",
+    "CL_DV_OV_continue_fast_cool_desc": "Охладите рерну што је брже могуће.",
+    "CL_DV_OV_continue_reduces_desc": "Смањује преосталу влагу након кувања.",
+    "CL_DV_OV_go_to_extra": "Иди на екстра",
+    "CL_SL_CM_visualization": "Визуелизација",
+    "CL_SL_CM_laundry_usage_report": "Извештај о употреби веша",
+    "CL_SL_CM_usage_month": "Употреба месеца",
+    "CL_SL_CM_about_usage_month": "О употреби месеца",
+    "CL_SL_CM_about_usage_month_detail": "Приказани подаци су процене, а не тачна мерења. Наше процене су засноване на контролисаним тестовима, тако да ваши стварни резултати могу да варирају. Коришћење енергије у стварном свету зависи од вашег специфичног окружења и навика.",
+    "CL_SL_CM_drum_cleaning_title": "Чишћење бубња",
+    "CL_SL_CM_drum_cleaning_great_job": "Бубањ машине за прање је чист и урадили сте одличан посао!",
+    "CL_SL_CM_drum_cleaning_warning": "Опран је много пута од последњег чишћења бубња и препоручује се да се њиме направи чистач веша.",
+    "CL_SL_CM_drum_cleaning_about": "О чишћењу бубња",
+    "CL_SL_CM_drum_cleaning_about_detail": "Функција чишћења бубња машине за прање веша је циклус самочишћења дизајниран да уклони буђ или друге бактерије које су се вероватно накупиле у бубњу током опште употребе. Препоручујемо да очистите бубањ након 30 циклуса прања веша.",
+    "CL_SL_CM_data_statistics": "Статистика података",
+    "CL_SL_CM_data_statistics_about": "О статистици података",
+    "CL_SL_CM_data_statistics_about_detail": "„Други“ је збир мање коришћених.",
+    "CL_SL_CM_usage_week_about": "О употреби недеље",
+    "CL_SL_CM_usage_month_about": "О употреби месеца",
+    "CL_SL_CM_usage_year_about": "О употреби године",
+    "CL_SL_CM_washing_temperature": "Температура прања",
+    "CL_SL_CM_washing_temperature_detail": "Ниже температуре су статистички енергетски ефикасније, па ћете можда желети да следећи пут покушате са нижом температуром воде.",
+    "add_appliance_connect_wifi_atos": "Повежите се на мрежу „ConnectLife“ у подешавањима Wi-Fi на вашем паметном телефону.\n\nИзађите из ConnectLife апликације и идите у подешавања Wi-Fi на вашем телефону. Повежите се на мрежу „ConnectLife“, укуцајте лозинку „ConnectLife“ и вратите се у апликацију."
 }
