--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -4387,5 +4387,28 @@
     "CL_CF_CM_Paired_users": "eşleştirilmiş kullanıcılar",
     "CL_CF_CS_atw_cs_2": "Menü listesine girmek için Menü tuşuna basın.",
     "CL_CF_CS_atw_cs_3": "WIFI'yi seçin, ardından WIFI yapılandırmasını başlatmak için orta düğmeye basın. WLAN sembolü şimdi yanıp sönmeye başlayacaktır.",
-    "CL_CF_CM_sun_rain_atw_name": "ATW Isı Pompası"
+    "CL_CF_CM_sun_rain_atw_name": "ATW Isı Pompası",
+    "CL_DV_OV_continue_keep_warm_desc": "Yemeğinizin sıcak kalması için ek süre ekleyin.",
+    "CL_DV_OV_continue_fast_cool_desc": "Fırını mümkün olduğunca çabuk soğutun.",
+    "CL_DV_OV_continue_reduces_desc": "Pişirme sonrası kalan nemi azaltır.",
+    "CL_DV_OV_go_to_extra": "Ekstralara git",
+    "CL_SL_CM_visualization": "Görselleştirme",
+    "CL_SL_CM_laundry_usage_report": "Çamaşır kullanım raporu",
+    "CL_SL_CM_usage_month": "Ayın kullanımı",
+    "CL_SL_CM_about_usage_month": "Ayın kullanımı hakkında",
+    "CL_SL_CM_about_usage_month_detail": "Gösterilen veriler tahminidir, kesin ölçümler değildir. Tahminlerimiz kontrollü testlere dayanmaktadır, bu nedenle gerçek sonuçlarınız farklılık gösterebilir. Gerçek dünyadaki enerji kullanımı, özel ortamınıza ve alışkanlıklarınıza bağlıdır.",
+    "CL_SL_CM_drum_cleaning_title": "Davul temizliği",
+    "CL_SL_CM_drum_cleaning_great_job": "Çamaşır makinesinin tamburu temiz ve harika bir iş çıkarmışsınız!",
+    "CL_SL_CM_drum_cleaning_warning": "Son kazan temizliğinden bu yana defalarca yıkanmış olup, çamaşırların daha temiz olmasını sağlamak için kullanılması tavsiye edilir.",
+    "CL_SL_CM_drum_cleaning_about": "Tambur temizliği hakkında",
+    "CL_SL_CM_drum_cleaning_about_detail": "Çamaşır makinesi tambur temizleme fonksiyonu, genel kullanım sırasında tamburun içinde oluşabilecek küf veya diğer bakterileri gidermek için tasarlanmış bir kendi kendini temizleme döngüsüdür. 30 yıkama döngüsünden sonra tambur temizliği yapmanızı öneririz.",
+    "CL_SL_CM_data_statistics": "Veri istatistikleri",
+    "CL_SL_CM_data_statistics_about": "Veri istatistikleri hakkında",
+    "CL_SL_CM_data_statistics_about_detail": "“Diğerleri” daha az kullanılanların toplamıdır.",
+    "CL_SL_CM_usage_week_about": "Haftanın kullanımı hakkında",
+    "CL_SL_CM_usage_month_about": "Ayın kullanımı hakkında",
+    "CL_SL_CM_usage_year_about": "Yılın kullanımı hakkında",
+    "CL_SL_CM_washing_temperature": "Yıkama sıcaklığı",
+    "CL_SL_CM_washing_temperature_detail": "Daha düşük sıcaklıklar istatistiksel olarak daha fazla enerji tasarrufu sağlar, bu nedenle bir dahaki sefere daha düşük bir su sıcaklığı denemek isteyebilirsiniz.",
+    "add_appliance_connect_wifi_atos": "Akıllı telefonunuzun Wi-Fi ayarlarında \"ConnectLife\" ağına bağlanın.\n\nConnectLife uygulamasından çıkın ve akıllı telefonunuzun Wi-Fi ayarlarına gidin. \"ConnectLife\" ağına bağlanın, \"ConnectLife\" parolasını yazın ve uygulamaya geri dönün."
 }
