--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -4387,5 +4387,28 @@
     "CL_CF_CM_Paired_users": "người dùng được ghép nối",
     "CL_CF_CS_atw_cs_2": "Nhấn nút Menu để vào danh sách menu.",
     "CL_CF_CS_atw_cs_3": "Chọn WIFI, sau đó nhấn nút giữa để bắt đầu cấu hình WIFI. Biểu tượng WLAN sẽ bắt đầu nhấp nháy.",
-    "CL_CF_CM_sun_rain_atw_name": "Máy bơm nhiệt ATW"
+    "CL_CF_CM_sun_rain_atw_name": "Máy bơm nhiệt ATW",
+    "CL_DV_OV_continue_keep_warm_desc": "Thêm thời gian để giữ ấm thức ăn.",
+    "CL_DV_OV_continue_fast_cool_desc": "Làm nguội lò càng nhanh càng tốt.",
+    "CL_DV_OV_continue_reduces_desc": "Giảm độ ẩm còn lại sau khi nấu.",
+    "CL_DV_OV_go_to_extra": "Đi đến phần bổ sung",
+    "CL_SL_CM_visualization": "Hình ảnh hóa",
+    "CL_SL_CM_laundry_usage_report": "Báo cáo sử dụng đồ giặt",
+    "CL_SL_CM_usage_month": "Cách sử dụng của tháng",
+    "CL_SL_CM_about_usage_month": "Về việc sử dụng tháng",
+    "CL_SL_CM_about_usage_month_detail": "Dữ liệu hiển thị là ước tính, không phải là số đo chính xác. Ước tính của chúng tôi dựa trên các thử nghiệm được kiểm soát, do đó kết quả thực tế của bạn có thể khác. Mức sử dụng năng lượng thực tế phụ thuộc vào môi trường và thói quen cụ thể của bạn.",
+    "CL_SL_CM_drum_cleaning_title": "Vệ sinh trống",
+    "CL_SL_CM_drum_cleaning_great_job": "Lồng máy giặt sạch sẽ và bạn đã làm rất tốt!",
+    "CL_SL_CM_drum_cleaning_warning": "Máy đã được giặt nhiều lần kể từ lần vệ sinh lồng giặt cuối cùng và được khuyến khích sử dụng để làm chất tẩy rửa quần áo.",
+    "CL_SL_CM_drum_cleaning_about": "Về việc vệ sinh trống",
+    "CL_SL_CM_drum_cleaning_about_detail": "Chức năng vệ sinh lồng giặt là chu trình tự làm sạch được thiết kế để loại bỏ nấm mốc hoặc các loại vi khuẩn khác có thể tích tụ bên trong lồng giặt trong quá trình sử dụng. Chúng tôi khuyên bạn nên vệ sinh lồng giặt sau 30 chu kỳ giặt.",
+    "CL_SL_CM_data_statistics": "Thống kê dữ liệu",
+    "CL_SL_CM_data_statistics_about": "Về thống kê dữ liệu",
+    "CL_SL_CM_data_statistics_about_detail": "“Khác” là tổng hợp của những từ ít được sử dụng hơn.",
+    "CL_SL_CM_usage_week_about": "Về cách sử dụng tuần",
+    "CL_SL_CM_usage_month_about": "Về việc sử dụng tháng",
+    "CL_SL_CM_usage_year_about": "Về cách sử dụng của năm",
+    "CL_SL_CM_washing_temperature": "Nhiệt độ giặt",
+    "CL_SL_CM_washing_temperature_detail": "Theo thống kê, nhiệt độ thấp hơn sẽ tiết kiệm năng lượng hơn, vì vậy bạn có thể thử nhiệt độ nước thấp hơn vào lần tới.",
+    "add_appliance_connect_wifi_atos": "Kết nối với mạng “ConnectLife” trong cài đặt Wi-Fi trên điện thoại thông minh của bạn.\n\nThoát ứng dụng ConnectLife và đi tới cài đặt Wi-Fi trên điện thoại thông minh của bạn. Kết nối với mạng “ConnectLife”, nhập mật khẩu “ConnectLife” và quay lại ứng dụng."
 }
