--- a/language/i18n_zh-TW.json
+++ b/language/i18n_zh-TW.json
@@ -4387,5 +4387,28 @@
     "CL_CF_CM_Paired_users": "配對用戶",
     "CL_CF_CS_atw_cs_2": "按下選單按鈕進入選單列表。",
     "CL_CF_CS_atw_cs_3": "選擇WIFI，然後按中間按鈕開始WIFI配置。 WLAN 符號現在將開始閃爍。",
-    "CL_CF_CM_sun_rain_atw_name": "ATW熱泵"
+    "CL_CF_CM_sun_rain_atw_name": "ATW熱泵",
+    "CL_DV_OV_continue_keep_warm_desc": "增加額外的時間來保溫食物。",
+    "CL_DV_OV_continue_fast_cool_desc": "盡快冷卻烤箱。",
+    "CL_DV_OV_continue_reduces_desc": "減少烹調後殘留的水分。",
+    "CL_DV_OV_go_to_extra": "前往額外內容",
+    "CL_SL_CM_visualization": "視覺化",
+    "CL_SL_CM_laundry_usage_report": "洗衣使用報告",
+    "CL_SL_CM_usage_month": "當月使用情況",
+    "CL_SL_CM_about_usage_month": "關於當月使用情況",
+    "CL_SL_CM_about_usage_month_detail": "顯示的數據為估計值，並非精確測量值。",
+    "CL_SL_CM_drum_cleaning_title": "滾筒清潔",
+    "CL_SL_CM_drum_cleaning_great_job": "洗衣機滾筒很乾淨，你做得很好！",
+    "CL_SL_CM_drum_cleaning_warning": "自從上次滾筒清洗以來已經洗過很多次了，建議用它來製作洗衣清潔劑。",
+    "CL_SL_CM_drum_cleaning_about": "關於滾筒清潔",
+    "CL_SL_CM_drum_cleaning_about_detail": "洗衣機滾筒清潔功能是一種自清潔循環，旨在去除一般使用過程中可能在滾筒內積聚的黴菌或其他細菌。",
+    "CL_SL_CM_data_statistics": "數據統計",
+    "CL_SL_CM_data_statistics_about": "關於數據統計",
+    "CL_SL_CM_data_statistics_about_detail": "「其他」是較少使用的總和。",
+    "CL_SL_CM_usage_week_about": "關於本週的使用情況",
+    "CL_SL_CM_usage_month_about": "關於當月使用情況",
+    "CL_SL_CM_usage_year_about": "關於當年的使用情況",
+    "CL_SL_CM_washing_temperature": "洗滌溫度",
+    "CL_SL_CM_washing_temperature_detail": "根據統計，較低的溫度更節能，因此您下次可能想嘗試較低的水溫。",
+    "add_appliance_connect_wifi_atos": "在智慧型手機的 Wi-Fi 設定中連接到「ConnectLife」網路。 \n\n退出 ConnectLife 應用程序，前往智慧型手機的 WiFi 設定。連接到“ConnectLife”網絡，輸入密碼“ConnectLife”，然後返回 ConnectLife 應用程式。"
 }
